@@ -19,6 +19,7 @@ inventory:
 * Fix #453: under MacOS, skip XML DTD validation for software inventory as
   parsing may fail if a proxy is enabled
 * Fix #473: fix arch detection under MacOS
+* Fix #475: fix video cards support under MacOS
 
 deploy:
 * Bump Deploy task version to 2.7
